Fix layout, add 'src code' link & tune background color

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 .App {
-    background-color: #eeeeee;
+    background-color: #f7f7f7;
     min-height: 100vh;
     display: flex;
     flex-direction: row;
