--- a/src/features/MainContent/MainContent.css
+++ b/src/features/MainContent/MainContent.css
@@ -1,6 +1,17 @@
 
 .MainContent {
-	width: 500px;
+	width: 600px;
 	max-width: 100vw;
 	margin: 40px 4px 10px;
+	padding: 4px;
+
+	flex-direction: column;
+	display: flex;
+	align-items: flex-start;
+}
+
+.panel {
+	flex: 1;
+	width: 100%;
+	overflow: hidden;
 }
