--- a/src/features/MainContent/MainContent.css
+++ b/src/features/MainContent/MainContent.css
@@ -2,7 +2,7 @@
 .MainContent {
 	width: 42rem;
 	max-width: 100vw;
-	margin: 40px 4px 10px;
+	margin: 0px 4px;
 	padding: 4px;
 
 	flex-direction: column;
